// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotSteps renders correctly 1`] = `
<DocumentFragment>
  .cache-zvjxz1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-55b8qa {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.cache-55b8qa.cache-55b8qa {
  margin-right: 8px;
}

.cache-710495 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.cache-710495.cache-710495 {
  margin-right: 0;
}

<div
    class="e1l6meh00 cache-zvjxz1 e1l6meh01"
  >
    <div
      class="e6t57f80 cache-55b8qa e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-710495 e7ah3bn0"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly useState function 1`] = `
<DocumentFragment>
  .cache-zvjxz1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-1p3mpkn {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.cache-1p3mpkn.cache-1p3mpkn {
  margin-right: 8px;
}

.cache-55b8qa {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.cache-55b8qa.cache-55b8qa {
  margin-right: 8px;
}

.cache-710495 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.cache-710495.cache-710495 {
  margin-right: 0;
}

<div
    class="e1l6meh00 cache-zvjxz1 e1l6meh01"
  >
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-55b8qa e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-710495 e7ah3bn0"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly wit 10 steps, default step=4 1`] = `
<DocumentFragment>
  .cache-zvjxz1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-1p3mpkn {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.cache-1p3mpkn.cache-1p3mpkn {
  margin-right: 8px;
}

.cache-55b8qa {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.cache-55b8qa.cache-55b8qa {
  margin-right: 8px;
}

.cache-710495 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.cache-710495.cache-710495 {
  margin-right: 0;
}

<div
    class="e1l6meh00 cache-zvjxz1 e1l6meh01"
  >
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-55b8qa e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-1p3mpkn e7ah3bn0"
    />
    <div
      class="e6t57f80 cache-710495 e7ah3bn0"
    />
  </div>
</DocumentFragment>
`;
